# qa-automation-framework

./: README.md  conftest.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: qa.yml
config/: settings.py
pages/: base_page.py  login_page.py
reports/: report.html
tests/: test_login.py
utils/: driver_factory.py  logger.py
