[project]
name = "qa-automation-framework-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.32.0",
    "pytest>=9.1.1",
    "pytest-html>=4.2.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.46.0",
    "webdriver-manager>=4.1.2",
]
